iottekser/kubernetes/admin-deployment.yaml
# admin-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admin
  template:
    metadata:
      labels:
        app: admin
    spec:
      containers:
        - name: admin
          image: adnandzul/iottekser-admin:latest
          ports:
            - containerPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: admin-service
spec:
  type: NodePort
  selector:
    app: admin
  ports:
    - port: 4001
      targetPort: 4001
      nodePort: 31001
