iottekser/kubernetes/client-deployment.yaml
# client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 1  # Menjalankan 1 pod tanpa load balancing
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: adnandzul/iottekser-client:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-service
spec:
  type: NodePort
  selector:
    app: client
  ports:
    - port: 3000         # Port yang digunakan di dalam cluster
      targetPort: 3000   # Port container
      nodePort: 30080    # Port akses dari luar
