iottekser/kubernetes/server-deployment.yaml
#server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
        - name: server
          image: adnandzul/iottekser-server:latest  # Image kamu di DockerHub
          ports:
            - containerPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: server-service
spec:
  type: NodePort
  selector:
    app: server
  ports:
    - port: 4000          # Port di dalam cluster
      targetPort: 4000    # Port di pod
      nodePort: 32000
